# auto-installer

./: Cargo.toml
.github/workflows/: auto-lint-test.yml  packaging.yml
src/: argument_resolver.rs  command_executor.rs  environment_updater.rs  execution_platform.rs  link_executor.rs  main.rs  schema.rs
src/execution_platform/: target_platform.rs  unix.rs
src/execution_platform/target_platform/: unix.rs  windows.rs
